# energy_ml_platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  interview_notes.md  mlops_decisions.md  system_design.md
infra/docker/: Dockerfile.api  Dockerfile.training
infra/k8s/: api-deployment.yaml  mlflow-deployment.yaml  namespace.yaml
src/energy_platform/: __init__.py
src/energy_platform/api/: main.py  routes.py  schemas.py
src/energy_platform/config/: settings.py
src/energy_platform/data/: feature_engineering.py  generate_sample_data.py  preprocessing.py
src/energy_platform/models/: evaluate.py  predict.py  train.py
src/energy_platform/monitoring/: drift_detection.py
src/energy_platform/pipelines/: prefect_flows.py
src/energy_platform/pricing/: subscription_pricing.py
src/energy_platform/vpp/: battery_simulator.py
tests/: test_api.py  test_preprocessing.py  test_pricing_vpp.py  test_training.py
